cmake_minimum_required(VERSION 2.8.11)
project(qtchess)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS "-std=c++11 -march=native -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-ggdb")
set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Widgets)
find_package(Qt5Gui)
find_package(Qt5WebKitWidgets)
find_package(Qt5Svg)
find_package(Qt5Core)

file(GLOB_RECURSE SRC_CPP src/*.cpp)
file(GLOB_RECURSE SRC_HPP src/*.hpp)
file(GLOB_RECURSE UI_FORMS src/gui/*.ui)
file(COPY src/assets DESTINATION .)
include_directories(src)
qt5_wrap_ui(FORMS_HDR ${UI_FORMS})

add_executable(qtchess src/main.cpp ${SRC_CPP} ${FORMS_HDR})
target_link_libraries(qtchess Qt5::Widgets Qt5::Gui Qt5::WebKitWidgets Qt5::Svg Qt5::Core)
